fix footer visibilty for smaller device.

--- a/client/src/pages/Home/HomePage.css
+++ b/client/src/pages/Home/HomePage.css
@@ -308,7 +308,7 @@ footer {
   height: 100vh;
 }
 .hide-footer {
-  display: none !important;
+  display: none ;
 }
 .show-footer {
   display: block !important;
